gcc-defaults (1.74) UNRELEASED; urgency=low

  * Tighten the dependencies to 4.3.1.
  * gfortran: Don't include symlinks for runtime libs in /usr/lib.
    Closes: #485792.

 -- Matthias Klose <doko@debian.org>  Wed, 04 Jun 2008 16:01:57 +0200

gcc-defaults (1.73) unstable; urgency=low

  * Make GCC-4.3 the default on amd64 and i386.
  * Tighten the dependencies to 4.3.0-5.
  * Tighten the dependencies to 4.2.4-1.

 -- Matthias Klose <doko@debian.org>  Wed, 04 Jun 2008 00:56:41 +0200

gcc-defaults (1.72) unstable; urgency=high

  * Dont't build java related packages on alpha, arm, hppa. Closes: #483135.

 -- Matthias Klose <doko@debian.org>  Wed, 28 May 2008 06:47:59 +0200

gcc-defaults (1.71) unstable; urgency=high

  [Arthur Loiret]
  * Some clean up in build system. Add gnat_no_archs java_no_archs,
    gpc_no_archs and gdc_no_archs vars.
  * Build gfortran on sh3 and sh4, don't build java.

  [Matthias Klose]
  * Don't add a symlink for gc-analyze(1) when building without GFDL docs.
    Closes: #471818.
  * rebuild-gcj-db: Don't complain about gcj-dbtool succeeding on armel.
    Closes: #469412.
  * Remove jv-scan symlink. Closes: #477548.
  * Make ObjC, Obj-C++ 4.3 the default on armel.
  * Use /emul/... for amd64 biarch only.
 
 -- Matthias Klose <doko@debian.org>  Fri, 09 May 2008 00:39:11 +0200

gcc-defaults (1.70) unstable; urgency=low

  [Matthias Klose]
  * /usr/share/gcj/debian_defaults: Remove alpha, arm, hppa from
    gcj_archs, remove alpha from gcj_native_archs, add armel to
    gcj_archs and gcj_native_archs.
  * Make GCC-4.3 the default on hppa.
  * Remove gcj-4.3 build dependency on arm.

  [Ludovic Brenta]
  * make gnat-4.3 the default on alpha, mips and mipsel again, so
    now all architectures have the same default.  Closes: #475365.

  [Arthur Loiret]
  * debian/README.Debian:
    - Mention libstdc++ is provided by GCC-4.3.
    - Updates for gdc.
  * Remove gdc's Depends on cpp, gdc now has its own doc dir.